# noobAgent

./: .gitignore  main.py  pyproject.toml
notebook/: agent.ipynb  langfuse_agent.ipynb  tools.ipynb
